Add support for emoji reactions Squashed, modified, and rebased from glitch-soc/mastodon#2221.
Co-authored-by: fef <owo@fef.moe>
Co-authored-by: Jeremy Kescher <jeremy@kescher.at>
Co-authored-by: neatchee <neatchee@gmail.com>
Co-authored-by: Ivan Rodriguez <104603218+IRod22@users.noreply.github.com>
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -1474,7 +1474,8 @@ body > [data-popper-placement] {
     border-bottom: 0;
 
     .status__content,
-    .status__action-bar {
+    .status__action-bar,
+    .reactions-bar {
       margin-inline-start: $thread-margin;
       width: calc(100% - ($thread-margin));
     }
@@ -1605,6 +1606,10 @@ body > [data-popper-placement] {
   .status__collapse-button .icon {
     width: 24px;
     height: 24px;
+  }
+
+  .reactions-bar--empty {
+    display: none;
   }
 }
 
@@ -1818,6 +1823,10 @@ body > [data-popper-placement] {
 
   &-spacer {
     flex-grow: 1;
+  }
+
+  & > .emoji-picker-dropdown > .emoji-button {
+    padding: 0;
   }
 }
 
@@ -4815,6 +4824,10 @@ a.status-card {
 .detailed-status__button {
   flex: 1 1 auto;
   text-align: center;
+}
+
+.detailed-status__button .emoji-button {
+  padding: 0;
 }
 
 .column-settings__outer {
