--- a/app/javascript/flavours/glitch/styles/modernglitchfixes.css
+++ b/app/javascript/flavours/glitch/styles/modernglitchfixes.css
@@ -1,11 +1,27 @@
 body.app-body.flavour-glitch
   > #mastodon
+  .compose-form__autosuggest-wrapper
+  > :last-child {
+  padding-bottom: 2em !important;
+}
+
+body.app-body.flavour-glitch > #mastodon .compose-form__buttons {
+  width: 100%;
+}
+
+body.app-body.flavour-glitch
+  > #mastodon
   .compose-form__buttons
   > div:last-child {
   margin-inline-start: auto;
 }
 
+body.app-body.flavour-glitch > #mastodon .compose-form__buttons-wrapper {
+  position: relative;
+}
+
 body.app-body.flavour-glitch > #mastodon .character-counter__wrapper {
+  position: absolute;
   inset-inline-end: 0;
   bottom: 100%;
   margin: 4px;
@@ -29,6 +45,7 @@ body.app-body.flavour-glitch
   .status__content
   .status__content__text {
   mask: linear-gradient(to bottom, #000 50px, transparent) !important;
+  -webkit-mask: linear-gradient(to bottom, #000 50px, transparent) !important;
   max-height: 100px;
 }
 
@@ -36,12 +53,31 @@ body.app-body.flavour-glitch
   > #mastodon
   .collapsed
   .status__content
-  p:not(:last-of-type) {
+  p:not(:last-child) {
   margin-bottom: 0.4em;
+}
+
+body.app-body.flavour-glitch > #mastodon .collapsed .status__content br {
+  display: block;
 }
 
 body.app-body.flavour-glitch > #mastodon .collapsed .status__content::after {
   content: unset;
+}
+
+body.app-body.flavour-glitch > #mastodon .collapsed .status__action-bar :not(i),
+body.app-body.flavour-glitch
+  > #mastodon
+  .collapsed
+  .detailed-status__action-bar
+  :not(i),
+body.app-body.flavour-glitch
+  > #mastodon
+  .collapsed
+  .picture-in-picture__footer
+  :not(i) {
+  height: unset !important;
+  width: unset !important;
 }
 
 body.app-body.flavour-glitch
@@ -52,16 +88,36 @@ body.app-body.flavour-glitch
   display: none;
 }
 
+body.app-body.flavour-glitch
+  > #mastodon
+  .status:not(.status-direct)
+  > .status__content {
+  margin-block: -90px -100px !important;
+  padding-block: 100px !important;
+}
+
+body.app-body.flavour-glitch
+  > #mastodon
+  .status:not(.status-direct)
+  > .status__content
+  .status__content__text {
+  margin-top: 0;
+}
+
+body.app-body.flavour-glitch
+  > #mastodon
+  .status:not(.status-direct)
+  > .status__content
+  > :last-child:not(.status__content__text) {
+  margin-bottom: 5px !important;
+}
+
 body.app-body.flavour-glitch > #mastodon .status .full-width {
   margin-inline: 0 !important;
 }
 
 body.app-body.flavour-glitch > #mastodon .status .status__action-bar {
   position: static;
-}
-
-body.app-body.flavour-glitch > #mastodon .status__info > span {
-  overflow: visible !important;
 }
 
 body.app-body.flavour-glitch > #mastodon .status__info .notification__message {
@@ -77,7 +133,10 @@ body.app-body.flavour-glitch > #mastodon .display-name__account {
   font-size: 15px;
 }
 
-body.app-body.flavour-glitch > #mastodon .media-gallery__preview {
+body.app-body.flavour-glitch
+  > #mastodon
+  .media-gallery__item
+  > .media-gallery__preview {
   display: unset;
 }
 
@@ -85,25 +144,39 @@ body.app-body.flavour-glitch > #mastodon .status__action-bar-spacer {
   min-width: 5px;
 }
 
+body.app-body.flavour-glitch > #mastodon .status__relative-time {
+  margin-inline: auto 5px !important;
+  z-index: 2;
+  flex-grow: 0 !important;
+  min-width: 5ch !important;
+}
+
+body.app-body.flavour-glitch > #mastodon .reactions-bar {
+  width: unset;
+  margin-top: 8px;
+}
+
 body.app-body.flavour-glitch > #mastodon .reactions-bar button {
   border-radius: 6px !important;
   padding-block: 2px;
 }
+@media (pointer: coarse) {
+  body.app-body.flavour-glitch > #mastodon .reactions-bar button {
+    padding: 4px 8px !important;
+  }
+
+  body.app-body.flavour-glitch
+    > #mastodon
+    .reactions-bar
+    button
+    .reactions-bar__item__emoji {
+    height: 18px;
+    width: 18px;
+  }
+}
 
 body.app-body.flavour-glitch > #mastodon .reactions-bar:empty {
   display: none;
-}
-
-body.app-body.flavour-glitch > #mastodon .detailed-status__wrapper {
-  box-shadow: none;
-}
-
-body.app-body.flavour-glitch
-  > #mastodon
-  .detailed-status__wrapper
-  > div
-  > .focusable:not(.status) {
-  box-shadow: var(--shadow);
 }
 
 body.app-body.flavour-glitch
@@ -118,7 +191,7 @@ body.app-body.flavour-glitch
   > #mastodon
   .notification
   > .notification__message {
-  padding-inline-start: 15px !important;
+  padding-inline: 15px !important;
   padding-top: 18px !important;
 }
 
@@ -157,6 +230,21 @@ body.app-body.flavour-glitch
   .status__prepend-icon-wrapper {
   all: unset;
   margin-inline-end: 10px;
+  display: flex;
+}
+
+body.app-body.flavour-glitch
+  > #mastodon
+  .status__prepend
+  .status__prepend-icon-wrapper
+  i,
+body.app-body.flavour-glitch
+  > #mastodon
+  .status__info
+  .notification__message
+  .status__prepend-icon-wrapper
+  i {
+  margin: auto;
 }
 
 body.app-body.flavour-glitch
@@ -181,6 +269,38 @@ body.app-body.flavour-glitch > #mastodon .pillbar-button {
   padding: 6px;
 }
 
+body.app-body.flavour-glitch > #mastodon .account__header__account-note {
+  margin-block: 10px 0;
+}
+
+body.app-body.flavour-glitch
+  > #mastodon
+  .account__header__account-note:focus-within {
+  border-radius: var(--radius) !important;
+}
+
+body.app-body.flavour-glitch
+  > #mastodon
+  .account__header__account-note__header {
+  align-items: center;
+}
+
+body.app-body.flavour-glitch
+  > #mastodon
+  .account__header__account-note__header
+  button {
+  display: flex;
+  gap: 0.2em;
+}
+
+body.app-body.flavour-glitch
+  > #mastodon
+  .account__header__account-note__content {
+  width: 100%;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
 body.app-body.flavour-glitch > #mastodon .account-card .media-modal__close {
   left: 10px;
   top: 10px;
@@ -202,63 +322,4 @@ body.app-body.flavour-glitch
 .layout-multiple-columns.flavour-glitch .drawer__inner {
   margin-top: -10px;
   padding-top: 30px !important;
-}
-
-.status.collapsed .status__content {
-  max-height: unset !important;
-}
-
-body.app-body.flavour-glitch
-  > #mastodon
-  .compose-form__autosuggest-wrapper
-  > :last-child {
-  padding-bottom: unset !important;
-}
-
-body.app-body.flavour-glitch
-  > #mastodon
-  .compose-form__buttons
-  > div:last-child {
-  margin-inline-start: unset;
-}
-
-body.app-body.flavour-glitch > #mastodon .character-counter__wrapper {
-  bottom: unset !important;
-}
-
-#mastodon
-  .detailed-status__action-bar.detailed-status__action-bar
-  > div:not(i) {
-  width: unset !important;
-}
-
-.layout-multiple-columns
-  #mastodon
-  .columns-area
-  .status__action-bar:not(i, .status__action-bar-spacer) {
-  max-width: unset !important;
-}
-
-.status.collapsed .status__content {
-  max-height: unset !important;
-}
-
-.status__action-bar-dropdown {
-  height: unset !important;
-  width: unset !important;
-}
-
-@media (width <= 889px) {
-  #mastodon .status__action-bar:not(i, .status__action-bar-spacer) {
-    max-width: unset !important;
-  }
-}
-
-body.app-body.flavour-glitch > #mastodon .notification__message > span,
-.notification__message > span > span,
-.status__prepend > span,
-.status__prepend > span > span {
-  display: unset !important;
-  flex-wrap: unset !important;
-  gap: unset !important;
 }
