Restore background to emoji reactions bar items (upstream bug? Manually set to none in upstream modern-glitch-fixes.css)

--- a/app/javascript/flavours/glitch/styles/modern-urusai-fixes.css
+++ b/app/javascript/flavours/glitch/styles/modern-urusai-fixes.css
@@ -38,3 +38,7 @@ body.app-body.flavour-glitch > #mastodon .notification__message > span,
   button {
   padding: 3px;
 }
+
+body.app-body.flavour-glitch > #mastodon .reactions-bar button:not(.active) {
+  background: lighten($ui-base-color, 12%);
+}
