--- a/app/javascript/flavours/glitch/styles/mastodon-sakura/diff.scss
+++ b/app/javascript/flavours/glitch/styles/mastodon-sakura/diff.scss
@@ -11,12 +11,12 @@ html {
 
 .status-card__actions button,
 .status-card__actions a {
-  color: rgba($white, 0.8);
+color: rgba($black, 0.8);
 
   &:hover,
   &:active,
   &:focus {
-    color: $white;
+    color: $black;
   }
 }
 
@@ -26,7 +26,7 @@ html {
 .column-inline-form,
 .error-column,
 .regeneration-indicator {
-  background: $white;
+  background: $ui-base-lighter-color;
   border: 1px solid lighten($ui-base-color, 8%);
   border-top: 0;
 }
@@ -150,7 +150,7 @@ html {
 }
 
 .report-dialog-modal .dialog-option .poll__input {
-  color: $white;
+  color: $ui-primary-color;
 }
 
 .search__input {
